// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analyzeRoute should analyze a basic query call properly 1`] = `
"function prefetchQuery() {
  queryClient.fetchQuery({
    queryKey: ["todos"],
    queryFn: () => ["3"]
  });
}"
`;

exports[`analyzeRoute should analyze a basic query call with variable properly 1`] = `
"function prefetchQuery() {
  const _temp = "5";
  queryClient.fetchQuery({
    queryKey: ["todos"],
    queryFn: () => _temp
  });
}"
`;

exports[`analyzeRoute should analyze a query dependent on another query properly 1`] = `
"function prefetchQuery() {
  const _useQuery = queryClient.fetchQuery({
    queryKey: ["todos"],
    queryFn: () => "result1"
  });
  const _temp = useQuery({
    queryKey: ["todos"],
    queryFn: () => "result1"
  });
  queryClient.fetchQuery({
    queryKey: ["todos"],
    queryFn: () => _temp.data + "result2"
  });
}"
`;

exports[`analyzeRoute should analyze a query dependent on useState properly 1`] = `
"function prefetchQuery() {
  const _useState = 0;
  queryClient.fetchQuery({
    queryKey: ["todos"],
    queryFn: () => _useState
  });
}"
`;
